@@ -796,13 +796,12 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
         }
     }
 
-    public Double getDeltaPPM(int ppmSet, int refSet) {
-        PPMv ppmV = getPPM(ppmSet);
-        PPMv refV = getRefPPM(refSet);
+    public Double getDeltaPPM(int iSet1, int iSet2, boolean ref1, boolean ref2) {
+        PPMv ppm1 = getPPMByMode(iSet1, ref1);
+        PPMv ppm2 = getPPMByMode(iSet2, ref2);
         Double delta;
-        if ((ppmV != null) && ppmV.isValid() && (refV != null)
-                && refV.isValid()) {
-            delta = (ppmV.getValue() - refV.getValue()) / refV.getError();
+        if ((ppm1 != null) && ppm1.isValid() && (ppm2 != null) && ppm2.isValid()) {
+            delta = (ppm1.getValue() - ppm2.getValue()) / ppm2.getError();
             delta = Math.round(delta * 100.0) / 100.0;
         } else {
             delta = null;
@@ -1608,7 +1607,7 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
 
         // name
         String name = bound.getName();
-        if (name.equals("")) {
+        if (name.isEmpty()) {
             name = ".";
         }
         sBuilder.append(String.format("%6s", name));
@@ -2109,7 +2108,7 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
             MoleculeBase.findEquivalentAtoms(entity);
         }
 
-        if ((aNum == targetANum) && (equivAtoms != null) && (equivAtoms.size() > 0)) {
+        if ((aNum == targetANum) && (equivAtoms != null) && (!equivAtoms.isEmpty())) {
             int nAtoms = 0;
             for (int i = 0; (i < equivAtoms.size()) && (i < shells); i++) {
                 AtomEquivalency aEquiv = equivAtoms.get(i);
@@ -2135,7 +2134,7 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
             MoleculeBase.findEquivalentAtoms(entity);
         }
         int shells = 2;
-        if (((targetANum == -1) || (aNum == targetANum)) && (equivAtoms != null) && (equivAtoms.size() > 0)) {
+        if (((targetANum == -1) || (aNum == targetANum)) && (equivAtoms != null) && (!equivAtoms.isEmpty())) {
             for (int i = 0; (i < equivAtoms.size()) && (i < shells); i++) {
                 AtomEquivalency aEquiv = equivAtoms.get(i);
                 if (!aEquiv.getAtoms().isEmpty()) {
@@ -2273,7 +2272,7 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
         if ((equivAtoms == null) || (equivAtoms.isEmpty())) {
             aType = 1;
         } else if (equivAtoms.size() == 1) {
-            AtomEquivalency aEquiv = equivAtoms.get(0);
+            AtomEquivalency aEquiv = equivAtoms.getFirst();
 
             if (aEquiv.getAtoms().size() == 3) {
                 aType = 1;
@@ -2283,7 +2282,7 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
                 aType = 3;
             }
         } else {
-            AtomEquivalency aEquiv = equivAtoms.get(0);
+            AtomEquivalency aEquiv = equivAtoms.getFirst();
 
             if (aEquiv.getAtoms().size() == 3) {
                 aType = 2;
@@ -2341,7 +2340,7 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
                 MoleculeBase.findEquivalentAtoms(entity);
             }
             if (equivAtoms != null) {
-                AtomEquivalency aEquiv = equivAtoms.get(0);
+                AtomEquivalency aEquiv = equivAtoms.getFirst();
                 if (aEquiv.getAtoms().size() == 2) {
                     pseudoName = 'Q' + name.substring(1, name.length() - 1);
                 }
@@ -2426,6 +2425,17 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
 
     @Override
     public Double getDouble(String elemName) {
+        if (elemName.startsWith("Seq")) {
+            return (double) getResidueNumber();
+        }
+        if (elemName.contains("-")) {
+            String[] sets = elemName.split("-");
+            boolean ref1 = sets[0].startsWith("REF");
+            boolean ref2 = sets[1].startsWith("REF");
+            int iSet1 = Integer.parseInt(sets[0].substring(sets[0].length() - 1));
+            int iSet2 = Integer.parseInt(sets[1].substring(sets[1].length() - 1));
+            return getDeltaPPM(iSet1, iSet2, ref1, ref2);
+        }
         boolean ref = elemName.startsWith("REF");
         int i = Integer.parseInt(elemName.substring(elemName.length() - 1));
         PPMv ppmv = getPPMByMode(i, ref);
@@ -2448,5 +2458,10 @@ public class Atom implements IAtom, Comparable<Atom>, TableItem {
 
     public Optional<AtomCouplingPair> getAtomCouplingPair(Atom atom) {
         return atomAtomCouplingPairMap == null ? Optional.empty() : Optional.ofNullable(atomAtomCouplingPairMap.get(atom));
+    }
+
+    @Override
+    public int getGroup(){
+        return getAtomicNumber();
     }
 }
